--- a/setup.yml
+++ b/setup.yml
@@ -22,10 +22,10 @@ valves:
 mongo:
   db: Thuia
   collections:
-    readings: readings
-    valves: valves
-    users: users
-    irrigations: irrigations
+    readings: readings_test
+    valves: valves_test
+    users: users_test
+    irrigations: irrigations_test
 collectors:
   expireTime: 3600
 irrigation:
