--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==21.4.0
 certifi==2021.10.8
 charset-normalizer==2.0.8
 click==8.0.3
+dotenv==0.0.5
 dpath==2.0.6
 idna==3.3
 importlib-metadata==4.8.2
@@ -12,7 +13,6 @@ MarkupSafe==2.0.1
 numpy==1.21.6
 packaging==21.3
 paho-mqtt==1.6.1
-pkg-resources==0.0.0
 pluggy==1.0.0
 py==1.11.0
 pymongo==4.1.1
