--- a/sink.service
+++ b/sink.service
@@ -4,7 +4,7 @@ Description=sink starter systemd service unit file.
 [Service]
 
 # The command that should be run when starting this service.
-ExecStart=sink-run
+ExecStart=python /usr/local/bin/startup.py
 
 [Install]
 WantedBy=multi-user.target
