add mailer service

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ MQTT_USERNAME=<username>
 MQTT_PASSWORD=<password>
 ACCU_API_KEY=<AccuWeather API Key>
 MONGODB_CONNECTION_STR=mongodb://<user>:<password>@<host>:<port>
+SMTP_HOST=<smtp_host>
+SMTP_PORT=<smtp_port>
+SMTP_SENDER=<smtp_sender>
+SMTP_PASSWORD=<smtp_password>
