--- a/sink.service
+++ b/sink.service
@@ -2,9 +2,8 @@
 Description=sink starter systemd service unit file.
 
 [Service]
-
 # The command that should be run when starting this service.
-ExecStart=python /usr/local/bin/startup.sh
+ExecStart=/bin/bash /usr/local/bin/startup.sh
 
 [Install]
 WantedBy=multi-user.target
