Implement scheduled irigation (#3)
* Change settings to have a default

* Add query for schedule

* Add scheduled irrigation to factory

* Partial implementation

* Refactor mutex using

* Add schedules collection in config file

* Update appointments query

* Remove ctor redundant parameters

* Create web app user mock

* Add test for changing irrigation mode from web app

* Add info log for configuration file loading

* Refactor MQTT Client

* Finish scheduled irrigation

* try and test the scheduled irrigation modes

* added mongo client

* longer wait time for scheduled check

* usersettings fix

* try not json dumping the dict

* call for scheduled irrigation correct

* make is running function for assert use

* is running

* lowered time for irrigation and accounted for wait time untill check

* increase wait time

* sleep increase

* Add sink id in topics

* Fix merge conflict errors

Co-authored-by: Daniel Popa <danypdaniel@gmail.com>
Co-authored-by: Daniel Popa <popa.daniel@agilefreaks.com>
Co-authored-by: DariusC <darius.cracea@wenglor.com>

--- a/test/fixtures/scheduled_irrigation_initial_mode_setup.yml
+++ b/test/fixtures/scheduled_irrigation_initial_mode_setup.yml
@@ -31,6 +31,6 @@ collectors:
   expireTime: 3600
   registrationEnabled: 'true'
 irrigation:
-  initialMode: manual
+  initialMode: scheduled
   automated:
     last_readings_count: 5
